# sig_kernels

./: .gitignore  CMakeLists.txt  perf-flags
src/: BM_cuda_kernel.cpp  BM_kernel_compute.cpp  BM_varpar_kernel.cpp  antidiagonal_matrix.cpp  antidiagonal_matrix.h  batch_varpar.cpp  batch_varpar_cuda.cpp  batch_varpar_naive.cpp  bench_args.cpp  bench_args.h  dot_product.cpp  dot_product.h  implementation_types.h  kernel_backends.h  kernel_compute.h  kernel_compute_cuda.cu  kernel_compute_cuda.h  main.cpp  py_kernels.cpp  random_paths.cpp  random_paths.h
tests/: test_sigker_batch_varpar.py
